--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <![endif]-->
 
 </head>
-<body>
+<body style="background-image: url(https://i.gifer.com/7dDt.gif);background-size: 150% 100%;">
  <!-- Preloading -->
 <div id="preloader">
     <div class="spinner">
