--- a/index.html
+++ b/index.html
@@ -366,18 +366,11 @@
                         <div class="section-title top_15 bottom_30"><span></span><h2>Contact Form</h2></div>
                         <form class="site-form">
                             <div class="row">
-                                <div class="col-md-6">
-                                    <input class="site-input" placeholder="Name">
-                                </div>
-                                <div class="col-md-6">
-                                    <input class="site-input" placeholder="E-mail">
-                                </div>
-                                <div class="col-md-12">
-                                    <textarea class="site-area" placeholder="Message"></textarea>
-                                </div>
-                                <div class="col-md-12 top_15 bottom_30">
-                                    <button class="site-btn" type="submit">Submit</button>
-                                </div>
+                                <form action="https://formsubmit.co/ahsanullah.ruet.ipe@gmail.com" method="POST">
+     <input type="text" name="name" required>
+     <input type="email" name="email" placeholder="Email Address">
+     <button type="submit">Send</button>
+</form>
                             </div>
                         </form>
                     </section>
