--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <!-- Simple Page Needs
 ================================================== -->
-<title>Ahsan-CV</title>
+<title>Ahsan ullah-CV</title>
 <meta charset="UTF-8">
 <meta name="description" content="Mat - Resume & vCard HTML Template">
 <meta name="keywords" content="personal, vcard, portfolio">
