--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="col-lg-3 col-md-4">
     <div class="profile">
         <div class="profile-name">
-            <span class="name">MD.AHSAN ULLAH</span><br>
+            <span class="name">MD.AHSAN ULLAH Sabbir</span><br>
             <span class="job">Industrial & Production Engineer</span>
         </div>
         <figure class="profile-image">
