--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <div class="col-lg-3 col-md-4">
     <div class="profile">
         <div class="profile-name">
-            <span class="name">MD.AHSAN ULLAH Sabbir</span><br>
-            <span class="job">Industrial & Production Engineer</span>
+            <span class="name">MD.AHSAN ULLAH</span><br>
+            <span class="job">Industrial & Pproduction Engineer</span>
         </div>
         <figure class="profile-image">
             <img src="images/AU.jpg" alt="">
